--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       .sidenav {
       height: 100%;
       width: 0; /* Initially hidden */
+      position: a;
       position: fixed;
       top: 0;
       left: 0;
@@ -46,7 +47,6 @@
         margin-left: 50px;
       }
 
-      /* Styles for the open/close button */
       #openBtn {
         position: fixed;
         top: 20px;
@@ -63,7 +63,6 @@
       <a href="index.html">Home</a>
       <a href="#services">Services</a>
       <a href="portfilo.html">Portfolio</a>
-      <a href="#contact">Contact</a>
       <a href="terms-and-conditions.html">terms-and-conditions</a>
       <!-- Add more menu items as needed -->
     </div>
