--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <section id="contact">
         <h2>Contact Us</h2>
         <p>For inquiries, contact us via:</p>
-        <p>CALL NOW: [9014602005]</p>
+        <p>CALL NOW: 9014602005</p>
         <p>WhatsApp: <a href="https://wa.me/9014602005">CHAT NOW</a></p>
       </section>
 
