--- a/portfilo.html
+++ b/portfilo.html
@@ -61,22 +61,22 @@
         <img src="DP.jpg" alt="DISPLAY PICTURE" />
       </section>
 
-      <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>Python</li>
-          <li>SQL</li>
-          <li>Microsoft Azure</li>
-        </ul>
-      </section>
-
       <section id="projects">
         <h2>Projects</h2>
-        <p>
-          This section will showcase your projects. You can add project
-          descriptions, links to deployed projects, or screenshots here.
-        </p>
-      </section>
+        
+        <div class="project">
+          <img src="project1-preview.jpg" alt="Project 1 Preview">
+          <h3>Project 1</h3>
+          <p>Description of Project 1</p>
+          <a href="project1-details.pdf" target="_blank">View Details (PDF)</a>
+        </div>
+      
+        <div class="project">
+          <img src="project2-preview.jpg" alt="Project 2 Preview">
+          <h3>Project 2</h3>
+          <p>Description of Project 2</p>
+          <a href="project2-details.pdf" target="_blank">View Details (PDF)</a>
+        </div>
 
       <section id="contact">
         <h2>Contact Me</h2>
