--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,9 @@
     </nav>
 
     <section id="Projects">
-      <h2>PRPJECTS</h2>
+      <h2>PROJECTS</h2>
 
       <div class="project">
-        <img src="webbrowser_prevw1.jpg" alt="webbrowser preview" />
         <img src="webbrowser_prevw2.jpg" alt="webbrowser preview" />
         <h3>WEB BROWSER</h3>
         <p>
@@ -42,10 +41,8 @@
           module that you will need to install separately.
         </p>
         <p>
-          <h1>Project Prerequisites:</h1>
-          To build this Python Web Browser project, we
-          will need the following libraries: 
-          1. PyQt5 – To create the GUI. 2.
+          Project Prerequisites: To build this Python Web Browser project, we
+          will need the following libraries: 1. PyQt5 – To create the GUI. 2.
           sys.argv – To get the inputs entered from the command line 3.
           PyQt5.QtCore.QUrl – The QUrl class will be used to convert string
           objects to a Qt acceptable URL object that will navigate through all
@@ -59,14 +56,6 @@
         </p>
         <a href="Project proposal.pdf" target="_blank">View Details (PDF)</a>
       </div>
-
-      <div class="project">
-        <img src="project2-preview.jpg" alt="Project 2 Preview" />
-        <h3>Project 2</h3>
-        <p>Description of Project 2</p>
-        <a href="project2-details.pdf" target="_blank">View Details (PDF)</a>
-      </div>
-
       <!-- Add more projects as needed -->
     </section>
 
