--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,11 @@
       </div>
     </header>
 
-    <nav>
+    <nav class="nav">
       <a href="index.html">Home</a>
     </nav>
 
-    <section id="Projects">
+    <section id="projects">
       <h2>PROJECTS</h2>
 
       <div class="project">
@@ -40,6 +40,7 @@
           the PyQt5 library, and its modules, including the WebEngineWidgets
           module that you will need to install separately.
         </p>
+
         <p>
           Project Prerequisites: To build this Python Web Browser project, we
           will need the following libraries: 1. PyQt5 – To create the GUI. 2.
@@ -54,6 +55,7 @@
           5. PyQt5.QtWebEngineWidgets.QWebEngineView – It is used to load the
           content of a website directly from the internet.
         </p>
+
         <a href="Project proposal.pdf" target="_blank">View Details (PDF)</a>
       </div>
       <!-- Add more projects as needed -->
