--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,8 @@
       <h2>PROJECTS</h2>
 
       <div class="project">
-        <img src="webbrowser_prevw2.jpg" alt="webbrowser preview" />
+        <img src="webbrowser_prevw1.jpg" alt="webbrowser preview 1" />
+        <img src="webbrowser_prevw2.jpg" alt="webbrowser preview 2" />
         <h3>WEB BROWSER</h3>
         <p>
           You do not know what web browsers are? A web browser is a software
