--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
       <div class="project">
         <img src="webbrowser_prevw1.jpg" alt="webbrowser preview 1" />
         <img src="webbrowser_prevw2.jpg" alt="webbrowser preview 2" />
+        <img src="webbrowser_prevw3.jpg" alt="webbrowser preview 3" />
         <h3>WEB BROWSER</h3>
         <p>
           You do not know what web browsers are? A web browser is a software
