--- a/portfilo.html
+++ b/portfilo.html
@@ -55,7 +55,13 @@
           ever-evolving landscape of technology, leaving a lasting impact on the
           world around us.
         </p>
-        <img src="DP.jpg" alt="DISPLAY PICTURE" />
+      </section>
+      <section id="Resume">
+        <h2>My Resume</h2>
+        <div class="resume-images">
+          <img src="first_resume.jpg" alt="Resume Page 1" />
+          <img src="second_resume.jpg" alt="Resume Page 2" />
+        </div>
       </section>
     </main>
 
