--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,10 @@
         <img src="webbrowser_prevw1.jpg" alt="webbrowser preview 1" />
         <img src="webbrowser_prevw2.jpg" alt="webbrowser preview 2" />
         <img src="webbrowser_prevw3.jpg" alt="webbrowser preview 3" />
-        <h3>WEB BROWSER</h3>
+        <h1>WEB BROWSER</h1>
         <p>
-          You do not know what web browsers are? A web browser is a software
+          <h3>You do not know what web browsers are?</h3>
+          A web browser is a software
           program that allows you to access the internet and all the web pages
           in it. Most common web browsers are Google Chrome, Microsoft Edge,
           Brave, Firefox, and Safari, and you are most definitely reading this
@@ -44,7 +45,7 @@
         </p>
 
         <p>
-          Project Prerequisites: To build this Python Web Browser project, we
+          <h3>Project Prerequisites:</h3> To build this Python Web Browser project, we
           will need the following libraries: 1. PyQt5 – To create the GUI. 2.
           sys.argv – To get the inputs entered from the command line 3.
           PyQt5.QtCore.QUrl – The QUrl class will be used to convert string
