--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
         </div>
         <h1>FIBNOCICS CONSULTANCY</h1>
       </div>
+      <div class="toggle-container">
+        <input type="checkbox" id="dark-mode-toggle" />
+        <label for="dark-mode-toggle">💡</label>
+    </div>
     </header>
 
     <section id="home">
@@ -124,6 +128,7 @@
           <a href="terms-and-conditions.html">Terms and Conditions</a>.
         </p>
       </section>
+      <script src="darkmode.js"></script>
     </footer>
   </body>
 </html>
