--- a/portfilo.html
+++ b/portfilo.html
@@ -1,3 +1,4 @@
+make the below one as same as you did before for index.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,95 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YOGESH - Portfolio</title>
     <link rel="stylesheet" href="portfolio.css" />
-    <script src="darkmode.js" defer></script>
     <style>
-      body {
-        font-family: "Poppins", sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f4f4f4;
-        color: #333;
-        transition: all 0.5s ease-in-out;
-      }
-
-      header {
-        text-align: center;
-        background: #2980b9;
-        color: white;
-        padding: 30px 20px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-      }
-
-      nav ul {
-        list-style: none;
-        padding: 0;
-        text-align: center;
-        background: #2c3e50;
-      }
-
-      nav ul li {
-        display: inline;
-        padding: 15px;
-      }
-
-      nav ul li a {
-        color: white;
-        text-decoration: none;
-        padding: 15px 20px;
-        transition: 0.3s;
-      }
-
-      nav ul li a:hover {
-        background: #34495e;
-        border-radius: 5px;
-      }
-
-      main {
-        max-width: 900px;
-        margin: 30px auto;
-        padding: 20px;
-        background: white;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-
-      section {
-        margin-bottom: 40px;
-      }
-
-      h2 {
-        color: #2980b9;
-        text-align: center;
-      }
-
-      .resume-images {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-      }
-
-      .resume-images img {
-        width: 40%;
-        border-radius: 10px;
-        transition: transform 0.3s;
-      }
-
-      .resume-images img:hover {
-        transform: scale(1.05);
-      }
-
-      footer {
-        text-align: center;
-        padding: 20px;
-        background: #2c3e50;
-        color: white;
-      }
+      /* Additional styles can be added here if necessary */
     </style>
   </head>
   <body>
     <header>
       <h1>SANKRANTHI YOGESH</h1>
       <p>Software Developer</p>
+      <!-- Changed from "JR Developper" to "Software Developer" for professionalism -->
     </header>
 
     <nav>
@@ -107,13 +28,35 @@
       <section id="about">
         <h2>About Me</h2>
         <p>
-          I am a dedicated Computer Engineering student passionate about coding
-          and problem-solving. With expertise in data structures and SQL, I am
-          committed to continuous learning and innovation. My goal is to become
-          a respected software developer and mentor aspiring tech professionals.
+          As a dedicated Computer Engineering student with a passion for coding
+          and data structures, I strive to harness the power of technology to
+          solve complex problems and create innovative solutions. With a keen
+          interest in browsing and cricket, I bring a dynamic perspective to my
+          work, continuously seeking new challenges to expand my skill set. My
+          journey as a learner has led me to master SQL alongside various coding
+          languages, enabling me to navigate the intricate landscapes of
+          software development with confidence and precision. With a vision to
+          become a respected software developer, I am committed to continuously
+          learning and embracing new technologies, ensuring that I stay at the
+          forefront of innovation. Driven by a desire to make a positive impact,
+          I am dedicated to leveraging my expertise to mentor and empower
+          others, helping them fulfill their aspirations in the realm of
+          technology. Through my consultancy, FIBNOCICS CONSULTANCY, I aim to
+          provide comprehensive support to individuals seeking to excel in their
+          academic pursuits, offering services such as TOEFL and GRE exam
+          preparation, online booking solutions, and personalized consultancy
+          services. With a strong emphasis on integrity and excellence, I
+          approach each endeavor with a sense of responsibility and a commitment
+          to upholding the highest standards. By living with honor and
+          integrity, I strive to inspire and empower those around me, fostering
+          a culture of growth and mutual respect. Through my portfolio, I invite
+          you to explore the culmination of my efforts, showcasing not only my
+          technical proficiency but also my dedication to continuous improvement
+          and lifelong learning. Join me on this journey as we navigate the
+          ever-evolving landscape of technology, leaving a lasting impact on the
+          world around us.
         </p>
       </section>
-
       <section id="Resume">
         <h2>My Resume</h2>
         <div class="resume-images">
